option('tests', type: 'feature', value: 'auto',
        description: 'build unit tests')
option('long-tests', type: 'boolean', value: false,
        description: 'also build tests that take a long time to run')
option('docs', type: 'feature', value: 'auto',
        description: 'build documentation')
option('no-pypkg-vendor', type: 'boolean', value: 'false',
        description: 'Do not vendor python packages')
