licenses = files(
    'Apache-2.0',
    'Artistic',
    'BSD',
    'CC0-1.0',
    'GFDL-1.2',
    'GFDL-1.3',
    'GPL-1',
    'GPL-2',
    'GPL-3',
    'LGPL-2',
    'LGPL-2.1',
    'LGPL-3',
    'MPL-1.1',
    'MPL-2.0',
)

install_data(licenses,
    install_dir : get_option('datadir') / meson.project_name() / 'common-licenses'
)
